[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/black.png" type="Texture" id=1]
[ext_resource path="res://scn/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scn/enemies.gd" type="Script" id=3]
[ext_resource path="res://scn/Enemy.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 1, 24 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 100, 150 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_texture = ExtResource( 1 )

[sub_resource type="Animation" id=7]
resource_name = "move_forward"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("enemies:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.57969e-05 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 5 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "move_left"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("enemies:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.57969e-05 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -5, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "move_right"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("enemies:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1.57969e-05 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 5, 0, 0 ) ]
}

[node name="Game" type="Spatial"]

[node name="wall left" type="StaticBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0 )
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="wall left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.5904 )
shape = SubResource( 1 )

[node name="wall right" type="StaticBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0 )
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="wall right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.5904 )
shape = SubResource( 1 )

[node name="limit left" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="limit left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.5904 )
shape = SubResource( 1 )

[node name="limit right" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="limit right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.5904 )
shape = SubResource( 1 )

[node name="background" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.40834, -39 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Perspective_cam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.405585, 0.914057, 0, -0.914057, 0.405585, 0, 22.937, -2.43799 )
current = true

[node name="Ortogonal_cam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.405585, 0.914057, 0, -0.914057, 0.405585, 0, 22.937, -8 )
projection = 1
current = true
size = 40.0

[node name="Player" parent="." instance=ExtResource( 2 )]
collision_mask = 1025

[node name="enemies wrapper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -9 )
script = ExtResource( 3 )
speed = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemies wrapper"]
anims/move_forward = SubResource( 7 )
anims/move_left = SubResource( 5 )
anims/move_right = SubResource( 6 )

[node name="enemies" type="Spatial" parent="enemies wrapper"]

[node name="Enemy1" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25 )

[node name="Enemy14" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )

[node name="Enemy23" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15 )

[node name="Enemy13" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -25 )

[node name="Enemy18" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20 )

[node name="Enemy24" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -15 )

[node name="Enemy2" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -25 )

[node name="Enemy11" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -20 )

[node name="Enemy26" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -15 )

[node name="Enemy12" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -25 )

[node name="Enemy15" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -20 )

[node name="Enemy19" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, -15 )

[node name="Enemy3" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -25 )

[node name="Enemy10" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -20 )

[node name="Enemy27" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -15 )

[node name="Enemy8" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -25 )

[node name="Enemy16" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -20 )

[node name="Enemy20" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -15 )

[node name="Enemy4" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -25 )

[node name="Enemy9" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -20 )

[node name="Enemy25" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -15 )

[node name="Enemy7" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -25 )

[node name="Enemy17" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -20 )

[node name="Enemy21" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -15 )

[node name="Enemy5" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -25 )

[node name="Enemy6" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -20 )

[node name="Enemy22" parent="enemies wrapper/enemies" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -15 )

[connection signal="area_entered" from="limit left" to="enemies wrapper" method="_on_limit_left_hit"]
[connection signal="area_entered" from="limit right" to="enemies wrapper" method="_on_limit_right_hit"]
[connection signal="animation_finished" from="enemies wrapper/AnimationPlayer" to="enemies wrapper" method="_on_animation_finished"]
